fix the misposition of repair and check icons on mobile

--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@ html{
         border-bottom: 1px solid #B8FFEC;
         align-items: center;
     }
+    .upperMenu__containerRight{
+        display: flex;
+        align-items: center;
+        column-gap: 15px;
+    }
 
     .upperMenu__burger{
         vertical-align:middle;
@@ -43,10 +48,16 @@ html{
         box-shadow: none;
         /*border: 1px solid #000;
         margin-left: 10px;*/
+        margin-top: 15px;
+        margin-bottom: 15px;
     }
 
     .upperMenu__checkIcon{
          box-shadow: none;
+         vertical-align: middle;
+         margin-top: 15px;
+         margin-bottom: 15px;
+
     }
 
     div.upperMenu img{
